# signal-foundry

./: .env.example  .gitignore  README.md  pyproject.toml
data/: business-owners-we-know.csv  live-audit-demo.csv  prospects-14589-initial.csv  prospects.example.csv
data/fixtures/live-audit-demo/: contact  index.html  menu
docs/: product-spec.md
signal_foundry/: __init__.py  audit.py  cli.py  models.py
